Close what the council found in the null display and the Linux libraries
Council round 2, bundles 2 and 3 (codex; agy answered bundle 3), each confirmed:
- NullDisplay: clients that never introduce themselves could hold every connection
  slot before CEF connected (P1): a client now takes a slot only after it presented the
  cookie; unintroduced clients wait in a queue of 256 whose oldest gives way to a new
  one, each on a virtual thread with 10 s to introduce itself; InternAtom's
  only-if-exists flag is honoured (None, nothing interned);
- LinuxLibraries: a mirror could fill the disk before the hash told (P2): every download
  is bounded by its pinned size, the CEF natives' too (HttpDownloader gains a download
  with both hash and size); a relative include of ld.so.conf lies beside its file, as
  glibc has it (P2); a library of another architecture, such as an i386 one of a
  multiarch server, no longer counts as present (P2): a 64-bit little-endian ELF of the
  platform's machine does;
- the bundle pinned NSS and 13 other packages at the final point release although Debian's
  long-term support fixed them later: pins.py now takes each package's last security
  update (14 per architecture, NSS 3.61-1+deb11u7 among them), fetched from
  archive.debian.org/debian-security once it holds them and from Debian's snapshot
  archive until then; the proof bundle ran again with them.
Rejected: a writable cache letting another user plant libraries (only the server user can
write it, and that user already runs the server's code; the CEF natives and every other
mcav download trust the same folder).

Also: NetworkGuardTest checks the guard's socket instead of connecting to its freed port,
which another process of a busy machine may take at once.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>